--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "hello_world_main.c"
-                       PRIV_REQUIRES spi_flash
+                       PRIV_REQUIRES spi_flash "mlkem-embedded"
                        INCLUDE_DIRS "")
