--- a/components/mlkem_embedded/CMakeLists.txt
+++ b/components/mlkem_embedded/CMakeLists.txt
@@ -1,2 +1,7 @@
+set(mlkem_embedded_dirs
+    "mlkem-c-embedded/fips202"
+    "mlkem-c-embedded/hal"
+    "mlkem-c-embedded/mlkem")
+
 idf_component_register(SRCS "mlkem_embedded.c"
                     INCLUDE_DIRS "include")
