Add the dependencies

--- a/components/mlkem_embedded/CMakeLists.txt
+++ b/components/mlkem_embedded/CMakeLists.txt
@@ -3,5 +3,5 @@ set(mlkem_embedded_dirs
     "mlkem-c-embedded/hal"
     "mlkem-c-embedded/mlkem")
 
-idf_component_register(SRCS "mlkem_embedded.c"
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "${mlkem_embedded_dirs}"
+                    INCLUDE_DIRS "${mlkem_embedded_dirs}")
