--- a/components/mlkem_embedded/CMakeLists.txt
+++ b/components/mlkem_embedded/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(mlkem_embedded_dirs
     "mlkem-c-embedded/fips202"
-    "random"
+    "mlkem-c-embedded/hal"
     "mlkem-c-embedded/mlkem")
 
 idf_component_register(SRC_DIRS "${mlkem_embedded_dirs}"
                        INCLUDE_DIRS "${mlkem_embedded_dirs}"
-                       PRIV_REQUIRES "esp_hal_wdt")
+                       PRIV_REQUIRES "esp_hal_wdt" "bootloader_support" "hal")
