Got it working!

--- a/components/mlkem_embedded/CMakeLists.txt
+++ b/components/mlkem_embedded/CMakeLists.txt
@@ -1,7 +1,17 @@
 set(mlkem_embedded_dirs
     "mlkem-c-embedded/fips202"
-    "mlkem-c-embedded/hal"
     "mlkem-c-embedded/mlkem")
+
+
+if(CONFIG_IDF_TARGET STREQUAL "esp32c3")
+
+  list(APPEND mlkem_embedded_dirs "mlkem-c-embedded/hal")
+
+else()
+
+  list(APPEND mlkem_embedded_dirs "random")
+
+endif()
 
 idf_component_register(SRC_DIRS "${mlkem_embedded_dirs}"
                        INCLUDE_DIRS "${mlkem_embedded_dirs}"
