--- a/components/kyber/CMakeLists.txt
+++ b/components/kyber/CMakeLists.txt
@@ -1,2 +1,5 @@
-idf_component_register(SRCS "kyber.c"
-                    INCLUDE_DIRS "include")
+set(kyber_dirs "kyber/ref"
+               "kyber/ref/nistkat")
+
+idf_component_register(SRCS "${kyber_dirs}"
+                    INCLUDE_DIRS "${kyber_dirs}")
