--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "hello_world.c" "main.c"
-                       PRIV_REQUIRES spi_flash "mlkem_embedded"
+                       PRIV_REQUIRES spi_flash "kyber"
                        INCLUDE_DIRS "include")
