--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,10 @@
-if(CONFIG_MLKEM EQUAL 2)
+if(CONFIG_MLKEM EQUAL 1)
+
+  idf_component_register(SRCS "hello_world.c" "main.c"
+                        PRIV_REQUIRES spi_flash "mlkem_native"
+                        INCLUDE_DIRS "include")
+
+elseif(CONFIG_MLKEM EQUAL 2)
 
   idf_component_register(SRCS "hello_world.c" "main.c"
                         PRIV_REQUIRES spi_flash "mlkem_embedded"
