--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,25 +1,25 @@
-if(CONFIG_MLKEM EQUAL 1)
+macro(start_delimiter)
 
-  idf_component_register(SRCS "hello_world.c" "main.c"
-                        PRIV_REQUIRES spi_flash "mlkem_native"
-                        INCLUDE_DIRS "include")
+    message("---------------------------------------------------------------------------------")
+    message("")
 
-elseif(CONFIG_MLKEM EQUAL 2)
+endmacro(start_delimiter)
 
-  idf_component_register(SRCS "hello_world.c" "main.c"
-                        PRIV_REQUIRES spi_flash "mlkem_embedded"
-                        INCLUDE_DIRS "include")
+macro(end_delimiter)
 
-elseif(CONFIG_MLKEM EQUAL 4)
+    message("")
+    message("---------------------------------------------------------------------------------")
 
-  idf_component_register(SRCS "hello_world.c" "main.c"
-                        PRIV_REQUIRES spi_flash "kyber"
-                        INCLUDE_DIRS "include")
+endmacro(end_delimiter)
 
-else()
+idf_component_register(SRCS "hello_world.c" "main.c"
+                       PRIV_REQUIRES spi_flash mlkem-native
+                       INCLUDE_DIRS "include")
 
-  idf_component_register(SRCS "hello_world.c" "main.c"
-                        PRIV_REQUIRES spi_flash
-                        INCLUDE_DIRS "include")
+# idf_component_register(SRCS "hello_world.c" "main.c"
+#                        PRIV_REQUIRES spi_flash mlkem_embedded
+#                        INCLUDE_DIRS "include")
 
-endif()
+# idf_component_register(SRCS "hello_world.c" "main.c"
+#                        PRIV_REQUIRES spi_flash kyber
+#                        INCLUDE_DIRS "include")
