--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -12,14 +12,27 @@ macro(end_delimiter)
 
 endmacro(end_delimiter)
 
-idf_component_register(SRCS "hello_world.c" "main.c"
-                       PRIV_REQUIRES spi_flash mlkem-native
-                       INCLUDE_DIRS "include")
+if(CONFIG_MLKEM EQUAL 1)
 
-# idf_component_register(SRCS "hello_world.c" "main.c"
-#                        PRIV_REQUIRES spi_flash mlkem_embedded
-#                        INCLUDE_DIRS "include")
+  idf_component_register(SRCS "hello_world.c" "main.c"
+                        PRIV_REQUIRES spi_flash mlkem-native
+                        INCLUDE_DIRS "include")
 
-# idf_component_register(SRCS "hello_world.c" "main.c"
-#                        PRIV_REQUIRES spi_flash kyber
-#                        INCLUDE_DIRS "include")
+elseif(CONFIG_MLKEM EQUAL 2)
+
+  idf_component_register(SRCS "hello_world.c" "main.c"
+                        PRIV_REQUIRES spi_flash mlkem_embedded
+                        INCLUDE_DIRS "include")
+
+elseif(CONFIG_MLKEM EQUAL 3)
+
+  idf_component_register(SRCS "hello_world.c" "main.c"
+                        PRIV_REQUIRES spi_flash kyber
+                        INCLUDE_DIRS "include")
+else()
+
+  idf_component_register(SRCS "hello_world.c" "main.c"
+                        PRIV_REQUIRES spi_flash
+                        INCLUDE_DIRS "include")
+
+endif()
